--- a/index.html
+++ b/index.html
@@ -23,33 +23,33 @@
       <ul class="lista-menu">
         <li class="lista-menu__titulo">Categorias</li>
         <li class="lista-menu__item">
-          <a href="#" class="lista-menu__link">Programação</a>
+          <a href="#" class="lista-menu__link">Intermediário</a>
         </li>
         <li class="lista-menu__item">
-          <a href="#" class="lista-menu__link">Front-end</a>
+          <a href="#" class="lista-menu__link">Controle Emocional</a>
         </li>
         <li class="lista-menu__item">
-          <a href="#" class="lista-menu__link">Infraestrutura</a>
+          <a href="#" class="lista-menu__link">Avançado</a>
         </li>
         <li class="lista-menu__item">
-          <a href="#" class="lista-menu__link">Business</a>
+          <a href="#" class="lista-menu__link">controle Intelectual</a>
         </li>
         <li class="lista-menu__item">
-          <a href="#" class="lista-menu__link">Design & UX</a>
+          <a href="#" class="lista-menu__link">Controle Psicológico</a>
         </li>
       </ul>
-      <img src="img/Logo.svg" alt="Logo da Alurabooks" class="container__imagem">
+      <img src="img/logo2.png" alt="Logo da Alurabooks" class="container__imagem">
     </div>
     <div class="container">
-      <a href="#"><img src="img/Favoritos.svg" alt="Meus favoritos" class="container__imagem"></a>
-      <a href="#"><img src="img/Compras.svg" alt="Carrinhos de compras" class="container__imagem"></a>
+      <a href="#"><img src="img/favoritos2.png" alt="Meus favoritos" class="container__imagem"></a>
+      <a href="#"><img src="img/compras2.png" alt="Carrinhos de compras" class="container__imagem"></a>
       <a href="#"><img src="img/Usuario2.png" alt="Meu perfil" class="container__imagem"></a>
     </div>
   </header>
 
   <section class="banner">
-    <h2 class="banner__titulo">Já sabe por onde começar?</h2>
-    <p class="banner__texto">Encontre em nossa estante o que precisa para seu desenvolvimento!</p>
+    <h2 class="banner__titulo">Já sabe por por onde começar?</h2>
+    <p class="banner__texto">Consulte nosos melhores livros
     <input type="search" class="banner__pesquisa" placeholder="Qual será sua próxima leitura?">
   </section>
 
@@ -60,12 +60,12 @@
       <!-- Additional required wrapper -->
       <div class="swiper-wrapper">
         <!-- Slides -->
-        <div class="swiper-slide"><img src="img/Apachekafka.svg"
+        <div class="swiper-slide"><img src="img/comoconv.png" 
             alt="Livro sobre apache kafka e spring boot da alura books"></div>
-        <div class="swiper-slide"><img src="img/Liderança.svg"
+        <div class="swiper-slide"><img src="img/persuasão.png" 
             alt="Livro sobre liderança em design design da alura books"></div>
-        <div class="swiper-slide"><img src="img/Javascript.svg" alt="Livro sobre javascript assertivo da alura books">
-        </div>
+        <div class="swiper-slide"><img src="img/gatilhos.png"  alt="Livro sobre javascript assertivo da alura books"> </div>
+
         <div class="swiper-slide">
           <img src="img/Guia Front-end.svg" alt="Livro Guia front end" />
         </div>
@@ -87,20 +87,20 @@
       <div class="card__descrição">
         <div class="descrição">
           <h3 class="descrição__titulo">Talvez você também se interesse por...</h3>
-          <h2 class="descrição__titulo-livro">Angular 11 e Firebase</h2>
+          <h2 class="descrição__titulo-livro">Enriquecer</h2>
           <p class="descrição__texto">
-            Construindo uma aplicação integrada com a plataforma do Google.
+            Construindo um futuro cheio de esperança
           </p>
         </div>
-        <img src="img/Angular.svg" class="descrição__imagem" />
+        <img src="img/rico.jpg" class="descrição__imagem" />
       </div>
       <div class="card__botões">
         <ul class="botões">
           <li class="botões__item">
-            <img src="img/Favoritos.svg" alt="Favoritar livro" />
+            <img src="img/favoritos2.png" alt="Favoritar livro" />
           </li>
           <li class="botões__item">
-            <img src="img/Compras.svg" alt="Adicionar no carrinho de compras" />
+            <img src="img/compras2.png" alt="Adicionar no carrinho de compras" />
           </li>
         </ul>
         <a href="#" class="botões__ancora">Saiba mais</a>
@@ -118,11 +118,11 @@
 
       <div class="swiper-wrapper">
         <!-- Slides -->
-        <div class="swiper-slide"><img src="img/ApacheKafka.svg"
+        <div class="swiper-slide"><img src="img/fbi.jpg"
             alt="Livro sobre apache kafka e spring boot da alura books"></div>
-        <div class="swiper-slide"><img src="img/Liderança.svg" alt="Livro sobre liderança em design da alura books">
+        <div class="swiper-slide"><img src="img/fbi.jpg"  alt="Livro sobre liderança em design da alura books">
         </div>
-        <div class="swiper-slide"><img src="img/Javascript.svg" alt="Livro sobre javascript assertivo da alurabooks">
+        <div class="swiper-slide"><img src="img/fbi.jpg" alt="Livro sobre javascript assertivo da alurabooks">
         </div>
         <div class="swiper-slide"><img src="img/Guia Front-end.svg" alt="Livro Guia front end"></div>
         <div class="swiper-slide"><img src="img/Portugol.svg" alt="Livro sobre portugol"></div>
@@ -140,21 +140,21 @@
         <!-- 1º coluna -->
         <div class="descrição">
           <img src="img/Estrelinhas.svg" alt="Avaliação 5 estrelas">
-          <h3 class="descrição__titulo">Autora do Mês</h3>
-          <h2 class="descrição__titulo-livro">Juliana Agarikov</h2>
-          <p class="descrição__texto">Analista de sistemas e escritora, Juliana é especialista em Front-End.
+          <h3 class="descrição__titulo">Autor do século</h3>
+          <h2 class="descrição__titulo-livro">Gabriel Santos</h2>
+          <p class="descrição__texto">O melhor escritor sobre livros de persuasão.
           </p>
         </div>
         <!-- 2º coluna -->
-        <img src="img/Escritora.svg" class="descrição__imagem">
+        <img src="img/neymar.jpg" width="200" height="200" class="descrição__imagem">
       </div>
 
       <!-- 2º linha -->
       <div class="card__botões">
         <!-- 1º coluna -->
         <ul class="botões">
-          <li class="botões__item"><img src="img/Favoritos.svg" alt="Favoritar livro"></li>
-          <li class="botões__item"><img src="img/Compras.svg" alt="Adicionar no carrinho de compras"></li>
+          <li class="botões__item"><img src="img/favoritos2.png" alt="Favoritar livro"></li>
+          <li class="botões__item"><img src="img/compras2.png" alt="Adicionar no carrinho de compras"></li>
         </ul>
         <!-- 2º coluna -->
         <a href="#" class="botões__ancora">Saiba mais</a>
@@ -168,27 +168,27 @@
   <section class="tópicos">
     <h2 class="tópicos__titulo">TÓPICOS VISITADOS RECENTEMENTE</h2>
     <ul class="tópicos__lista">
-      <li class="tópicos__item"><a href="#" class="tópicos__link">Android</a></li>
+      <li class="tópicos__item"><a href="#" class="tópicos__link">Controle Psicológico</a></li>
       <li class="tópicos__item">
-        <a href="#" class="tópicos__link">Marketing Digital</a>
+        <a href="#" class="tópicos__link">Como ferir o ego de qualquer pessoa</a>
       </li>
       <li class="tópicos__item">
-        <a href="#" class="tópicos__link">Agile</a>
+        <a href="#" class="tópicos__link">Poderes de persuasão</a>
       </li>
       <li class="tópicos__item">
-        <a href="#" class="tópicos__link">Startups</a>
+        <a href="#" class="tópicos__link">Controlar pessoas frágeis</a>
       </li>
       <li class="tópicos__item">
-        <a href="#" class="tópicos__link">HTML & CSS</a>
+        <a href="#" class="tópicos__link">Controle Intelectual</a>
       </li>
       <li class="tópicos__item">
-        <a href="#" class="tópicos__link">Python</a>
+        <a href="#" class="tópicos__link">Controle emocional</a>
       </li>
       <li class="tópicos__item">
-        <a href="#" class="tópicos__link">OO</a>
+        <a href="#" class="tópicos__link">Como avançar na vida</a>
       </li>
       <li class="tópicos__item">
-        <a href="#" class="tópicos__link">Java</a>
+        <a href="#" class="tópicos__link">Tutorial de como enriquecer</a>
       </li>
     </ul>
   </section>
@@ -205,5 +205,17 @@
     });
   </script>
 </body>
+
+<section class="contato">
+  <h2 class="contato__titulo">Fique por dentro das novidades!</h2>
+  <p class="contato__texto"> Atualizações de livros para dominar o mundo.</p>
+  <input type="email" placeholder="Cadastre seu e-mail" class="contato__email"/>
+</section>
+
+<hr />
+
+<footer class="rodapé">
+  <h2 class="rodapé__titulo">Quem fez essa merda se chama Gabriel</h2>
+</footer>
 
 </html>
